--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Buzz-Movie Selector</string>
+    <string name="app_name">Movie Mention</string>
+    <string name="username"> Username:</string>
+    <string name="password"> Password:</string>
+    <string name="login_button">Login</string>
+    <string name="register_button">Register</string>
+    <string name="cancle_button">Cancel</string>
+    <string name="title_activity_login">loginActivity</string>
+    <string name="title_activity_welcome_screen_activity">welcome_screen_activity</string>
 </resources>
