--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="login_button">Login</string>
     <string name="register_button">Register</string>
     <string name="cancle_button">Cancel</string>
-    <string name="title_activity_login">loginActivity</string>
+    <string name="title_activity_login">Login</string>
     <string name="title_activity_welcome_screen_activity">welcome_screen_activity</string>
     <string name="title_activity_main_menu">MainMenu</string>
+    <string name="title_activity_log_out">Logged Out</string>
+    <string name="titel_activity_profile">Profile</string>
     <string name="profileButton">Profile</string>
     <string name="logOutButton">Log Out</string>
 </resources>
