--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="title_activity_main">Welcome!</string>
     <string name="profileButton">Profile</string>
     <string name="logOutButton">Log Out</string>
+    <string name="log_in_again">Log In Again</string>
+    <string name="home">Home</string>
 </resources>
