changed loggedOut to logged_out in xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_main">Welcome!</string>
     <string name="profileButton">Profile</string>
-    <string name="logOutButton">Log Out</string>
+    <string name="log_out_button">Log Out</string>
     <string name="log_in_again">Log In Again</string>
     <string name="home">Home</string>
 </resources>
