Small changes, javadocs, styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,9 @@
     <string name="login_button">Login</string>
     <string name="register_button">Register</string>
     <string name="cancel_button">Cancel</string>
-    <string name="title_activity_login">Login</string>
-    <string name="title_activity_welcome_screen_activity">welcome_screen_activity</string>
-    <string name="title_activity_main_menu">MainMenu</string>
-    <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_login">Log in</string>
+    <string name="title_activity_main_menu">Main Menu</string>
+    <string name="title_activity_register">Register</string>
     <string name="title_activity_log_out">Logged Out</string>
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_main">Welcome!</string>
