--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="location">Location:</string>
     <string name="favoriteGenre">Favorite Genre:</string>
     <string name="updateProfile">Update Profile</string>
+    <string name="facebook_app_id">1244273668920806</string>
 </resources>
