--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Movie Mention</string>
-    <string name="username">Username:</string>
-    <string name="password">Password:</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
     <string name="login_button">Login</string>
     <string name="register_button">Register</string>
     <string name="cancel_button">Cancel</string>
@@ -113,4 +113,5 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_movie_search">MovieSearchActivity</string>
+    <string name="confirmPassword">Confirm Password</string>
 </resources>
