--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_movie_search">MovieSearchActivity</string>
+    <string name="title_activity_display_movies">DisplayMoviesActivity</string>
 </resources>
