--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_movie_search">MovieSearchActivity</string>
     <string name="confirmPassword">Confirm Password</string>
+    <string name="nameHint">Enter name here</string>
+    <string name="locationHint">Enter location here</string>
+    <string name="genreHint">Enter favorite genre</string>
 </resources>
