--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="nameHint">Enter name here</string>
     <string name="locationHint">Enter location here</string>
     <string name="genreHint">Enter favorite genre</string>
+    <string name="findMovies">Find Movies</string>
 </resources>
