--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,6 @@
     <string name="locationHint">Enter location here</string>
     <string name="genreHint">Enter favorite genre</string>
     <string name="findMovies">Find Movies</string>
+    <string name="newDVDS">New DVDs</string>
+    <string name="newInTheaters">New in Theaters</string>
 </resources>
