--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="locationHint">Enter location here</string>
     <string name="genreHint">Enter favorite genre</string>
     <string name="findMovies">Find Movies</string>
+    <string name="title_activity_movie_view">MovieViewActivity</string>
 </resources>
