--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,7 @@
     <string name="title_activity_movie_view">MovieViewActivity</string>
     <string name="newDVDS">New DVDs</string>
     <string name="newInTheaters">New in Theaters</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
