--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_user_list">UserListActivity</string>
     <string name="title_activity_detailed_user_view">DetailedUserView</string>
+    <string name="unlock">unlock account</string>
+    <string name="Lock">lock account</string>
+    <string name="unBan">unBan account</string>
+    <string name="Ban">ban account</string>
 </resources>
